# lgf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.ps1  v.mod
examples/cookie_clicker/: cookie_clicker.lua
src/: Main.cpp  main.cpp  main.v  window.v
src/libs/font/: font.cpp  font.lua  fontLoader.lua
src/libs/font/include/: font.hpp
src/libs/image/: image.cpp  image.lua  imageLoader.lua
src/libs/image/include/: image.hpp
src/libs/keyboard/: keyboard.cpp  keyboard.lua  keycode.lua
src/libs/keyboard/include/: keyboard.hpp  keycode.hpp
src/libs/mouse/: mouse.cpp  mouse.lua
src/libs/mouse/include/: mouse.hpp
src/libs/rectangle/: rectangle.cpp  rectangle.lua
src/libs/rectangle/include/: rectangle.hpp
src/libs/renderer/: renderer.cpp  renderer.lua
src/libs/renderer/include/: renderer.hpp
src/libs/utils/: utils.lua
src/libs/window/: window.cpp  window.lua
src/libs/window/include/: window.hpp
src/lua/: lua.v  main.lua  window.lua
src/scripts/: lgf.lua  main.lua
src/windows/: Event.cpp  Window.cpp
src/windows/include/: Event.hpp  Window.hpp  Windows.hpp
tests/: lgf.lua
tests/cookie_clicker/: cookie_clicker.lua
